tests/tooling/fixtures/native/recovery/negative/negative_overchained_pure_extern_pure_qualifiers.objc3
// Negative fixture: declaration qualifiers reject over-chained duplicate `pure` entries.
// Expected diagnostic code(s): O3P100.
module NegativeOverchainedPureExternPureQualifiers;

pure extern pure fn add(lhs: i32, rhs: i32) -> i32;

fn main() -> i32 {
  return add(1, 2);
}
